<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AutoCrash Assistant</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">LoginActivity</string>

    <!--Login Activity-->
    <string name="login_title">Авторизация</string>
    <string name="login_submit_button">Войти</string>
    <string name="login_name_field">Логин</string>
    <string name="login_pass_field">Пароль</string>
    <string name="login_name_empty">Не заполнено поле Логин.</string>
    <string name="login_pass_empty">Не заполнено поле Пароль.</string>

    <!--Main Activity-->
    <string name="empty_item">Не выбрано</string>
    <string name="hello_message">Вы авторизованны под именем:</string>
    <string name="empty_text">Список пуст</string>
    <string name="sync_message">Синхронизировать резервированные детали?</string>
    <!--<string name="hello_message2">Выберите дальнейшее действие в меню.</string>-->

    <!--Menu Actions-->
    <string name="action_add_part">Выгрузить детали</string>
    <string name="action_update_data">Обновить данные</string>
    <string name="action_logout_user">Выйти</string>
    <string name="action_delete_list_item">Удалить</string>

    <!--for user actions-->
    <string name="alert_title">Внимание</string>
    <string name="confirm_text">OK</string>
    <string name="confirm_cancel">Отмена</string>
    <string name="error_title">Ошибка</string>

    <!--error connections-->
    <string name="connection_error_title">Ошибка подключения к сети.</string>
    <string name="connection_error_text">Невозможно подключиться к сети :(</string>

    <!--progress text-->
    <string name="wait_title">Подождите</string>
    <string name="send_message">Отправляем данные</string>
    <string name="load_message">Получаем данные</string>
    <string name="success_message">Готово</string>
    <string name="reserve_message">Резервируем детали</string>

    <!--tab actions-->
    <string name="tab1">Резерв</string>
    <string name="tab2">Не законченные</string>

    <!--default reserve field values-->
    <string name="part_name_default">Резервированная запчасть</string>
    <string name="plus10">+10</string>
    <string name="plus25">+25</string>
    <string name="plus50">+50</string>
    <string name="plus_other">Другое</string>
    <string name="reserve_choice_text">Количество резервируемых деталей</string>
    <string name="reserve_title_list">Список</string>
    <string name="reserve_set_count">Введите значение</string>
    <string name="attention_title">Внимание!</string>
    <string name="confirm_sure">Вы уверены, что хотите зарезервировать</string>

    <!--parts fields-->
    <string name="parts_price_sell">Стоимость (на продажу)</string>
    <string name="parts_price_buy">Стоимость (покупка)</string>
    <string name="parts_comment">Комментарий</string>
    <string name="parts_category_id">Категория</string>
    <string name="parts_car_model_id">Модель автомобиля</string>
    <string name="parts_location_id">Склад</string>
    <string name="parts_supplier_id">Поставщик</string>
    <string name="parts_bu">Б/У автомобиль</string>

    <!--add part activity-->
    <string name="article_text">Артикул детали: </string>
    <string name="take_photo">Сделать фотографию</string>
    <string name="view_photo">Все фотографии</string>
    <string name="require_message">Поля обязательные для заполнения.</string>
    <string name="publish_button_text">Опубликовать</string>
    <string name="save_button_text">Сохранить</string>
    <string name="empty_images">Нет фотогафий</string>
    <string name="error_photo">Фотография не сохранена. Попробуйте еще раз.</string>

    <!--validation errors-->
    <string name="error_price_buy">Поле Стоимость(покупка) должно быть заполнено и больше нуля.</string>
    <string name="error_price_sell">Поле Стоимость(на продажу) должно быть заполнено и больше нуля.</string>
    <string name="error_cat_model">Поле Категория и Марка автомобиля должны быть заполнены.</string>

    <!--part sync item-->
    <string name="update_time_text">Обновлено:&#160;</string>
    <string name="state_text">Состояние:&#160;</string>
    <string name="photo_count">Кол-во фото:&#160;</string>

    <!--states-->
    <string name="state_no_sync">Не загружено</string>
    <string name="state_start_sync">Заргужается</string>
    <string name="state_success_sync">Загружено</string>
    <string name="state_allow_sync">В очереди на загрузку</string>
    <string name="state_error_sync">Ошибка при синхронизации</string>

    <!--gallery activity-->
    <string name="delete_button">Удалить</string>

    <!--receiver messages-->
    <string name="turn_on_wifi">Для синхронизации обязательно должен быть включен Wi-Fi</string>
</resources>
