<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.amobilestudio.razborapp.app.AddPartActivity"
    android:padding="5dp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:weightSum="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/article_text"
                    android:id="@+id/article_part" />

                <ProgressBar
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:id="@+id/loader"
                    android:layout_marginLeft="5dp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingTop="15dp"
                android:paddingBottom="7dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="* "
                    android:textColor="#ffff070a"
                    android:id="@+id/message_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/require_message"
                    android:id="@+id/required_text" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_marginBottom="15dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/parts_price_sell"
                        android:id="@+id/label_parts_price_sell" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" *"
                        android:textColor="#ffff070a"
                        android:id="@+id/price_sell_color" />
                </LinearLayout>

                <EditText
                    android:inputType="number"
                    android:nextFocusDown="@+id/parts_price_buy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/parts_price_sell" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/error_parts_price_sell"
                    android:textColor="#ffff2d23"
                    android:visibility="gone" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/parts_price_buy"
                        android:id="@+id/label_parts_price_buy" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" *"
                        android:textColor="#ffff070a"
                        android:id="@+id/price_buy_color" />
                </LinearLayout>

                <EditText
                    android:inputType="number"
                    android:nextFocusDown="@+id/parts_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/parts_price_buy" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/error_parts_price_buy"
                    android:textColor="#ffff2d23"
                    android:visibility="gone" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/parts_comment"
                    android:id="@+id/label_parts_comment" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:id="@+id/parts_comment"
                    android:lines="4"
                    android:gravity="left|top"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/error_parts_commenty"
                    android:textColor="#ffff2d23"
                    android:visibility="gone" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/parts_category_id"
                        android:id="@+id/label_category_id" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" *"
                        android:textColor="#ffff070a"
                        android:id="@+id/category_color" />
                </LinearLayout>

                <ru.amobilestudio.autorazborassistant.custom.MyAutoComplete
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/parts_category_id" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text=""
                    android:id="@+id/error_parts_category_id"
                    android:textColor="#ffff2d23"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/parts_car_model_id"
                        android:id="@+id/label_car_model_id" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" *"
                        android:textColor="#ffff070a"
                        android:id="@+id/car_model_color" />
                </LinearLayout>

                <ru.amobilestudio.autorazborassistant.custom.MyAutoComplete
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/parts_car_model_id" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text=""
                    android:id="@+id/error_car_model_id"
                    android:textColor="#ffff2d23"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/parts_location_id"
                    android:id="@+id/label_parts_location_id" />

                <ru.amobilestudio.autorazborassistant.custom.MyAutoComplete
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/parts_location_id" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text=""
                    android:id="@+id/error_parts_location_id"
                    android:textColor="#ffff2d23"
                    android:visibility="gone" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/parts_supplier_id"
                    android:id="@+id/label_parts_supplier_id" />

                <ru.amobilestudio.autorazborassistant.custom.MyAutoComplete
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/parts_supplier_id" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text=""
                    android:id="@+id/error_parts_supplier_id"
                    android:textColor="#ffff2d23"
                    android:visibility="gone" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/parts_bu"
                    android:id="@+id/label_parts_bu" />

                <ru.amobilestudio.autorazborassistant.custom.MyAutoComplete
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/parts_bu_id" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text=""
                    android:id="@+id/error_parts_bu"
                    android:textColor="#ffff2d23"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center|center_vertical"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/take_photo"
                    android:id="@+id/make_photo" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center|center_vertical">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save_button_text"
                    android:id="@+id/save_part_button" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/publish_button_text"
                    android:id="@+id/publish_part_button" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
